--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.24.0"]
 build-backend = "hatchling.build"
 
 [project]
-name = "df-fingerprint"
+name = "dataframe-fingerprint"
 version = "0.1.0"
 description = "Stable, cross-environment fingerprints for pandas DataFrames via canonicalization + hashing."
 readme = {file = "README.md", content-type = "text/markdown"}
